<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>exploy_vendor</name>
    <version>0.0.0</version>
    <description>Wrapper package for exploy C++ library</description>
    <maintainer email="dbellicoso@rai-inst.com">Dario Bellicoso</maintainer>
    <maintainer email="awollschlaeger@rai-inst.com">Annika Wollschläger</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>eigen</depend>
    <depend>exploy</depend>
    <depend>fmt</depend>
    <depend>nlohmann-json-dev</depend>

    <!-- Not part of rosdistro yet, system-wide installation expected. -->
    <!-- <depend>onnxruntime</depend> -->

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
